syntax = "proto3";

package rivet.backend.pkg.debug.email_res;

import "legacy/proto/common.proto";

message Request {
	rivet.common.Uuid verification_id = 1;
}

message Response {
	string code = 1;
}
